# egodeath.cpp

./: .gitignore  CMakeLists.txt  README.md  egodeath.md
src/: MEMORY_UI_IMPLEMENTATION.md  UI_IMPROVEMENT_CHECKLIST.md  agent.cpp  agent.hpp  client.cpp  client.hpp  common.cpp  common.hpp  custom_tools.cpp  custom_tools.hpp  editor.cpp  editor.hpp  main.cpp  mcp.cpp  mcp.hpp  memory.cpp  memory.hpp  plugins.cpp  plugins.hpp  shell_jobs.cpp  shell_jobs.hpp  soul.cpp  soul.hpp  status_enums.hpp  store.cpp  store.hpp  sys_monitor.cpp  sys_monitor.hpp  tools.cpp  tools.hpp  tui.cpp  tui.hpp  tui_command_palette.cpp
